[gd_scene load_steps=2 format=3 uid="uid://8d84mk47rhx8"]

[ext_resource type="Script" uid="uid://vmlh5n35w1nc" path="res://scripts/ui/character_sheet.gd" id="1_k2qpy"]

[node name="CharacterSheet" type="PanelContainer"]
script = ExtResource("1_k2qpy")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="LabelTitle" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Level:"
horizontal_alignment = 2

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "99"

[node name="XPTitle" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "XP:"
horizontal_alignment = 2

[node name="XPLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "57/450"

[node name="HealthTitle" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Health:"
horizontal_alignment = 2

[node name="HealthLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "184/240"

[node name="ManaTitle" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Mana:"
horizontal_alignment = 2

[node name="ManaLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0/120"

[node name="GoldTitle" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Gold:"
horizontal_alignment = 2

[node name="GoldLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "4789"

[node name="DamageTitle" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Damage:"
horizontal_alignment = 2

[node name="DamageLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "55"
